--- a/src/main/resources/view/CreateAccount_form.fxml
+++ b/src/main/resources/view/CreateAccount_form.fxml
@@ -11,45 +11,49 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootNode" prefHeight="464.0" prefWidth="880.0" style="-fx-background-color: #a5b1c2;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.CreateAccountFormController">
+<AnchorPane fx:id="rootNode" prefHeight="464.0" prefWidth="880.0" style="-fx-background-color: #f1f2f6;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.CreateAccountFormController">
    <children>
-      <AnchorPane prefHeight="466.0" prefWidth="466.0">
+      <AnchorPane layoutX="403.0" layoutY="59.0" prefHeight="359.0" prefWidth="426.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 30;">
          <children>
-            <ImageView fitHeight="466.0" fitWidth="466.0" pickOnBounds="true" preserveRatio="true">
+            <JFXTextField fx:id="txtFname" layoutX="27.0" layoutY="49.0" prefHeight="26.0" prefWidth="159.0" promptText="First Name">
+               <effect>
+                  <Bloom />
+               </effect>
+            </JFXTextField>
+            <JFXTextField fx:id="txtLname" layoutX="252.0" layoutY="49.0" prefHeight="26.0" prefWidth="159.0" promptText="Last Name" />
+            <JFXTextField fx:id="txtetf" layoutX="27.0" layoutY="124.0" prefHeight="26.0" prefWidth="159.0" promptText="ETF Number" />
+            <JFXTextField fx:id="txtnic" layoutX="252.0" layoutY="124.0" prefHeight="26.0" prefWidth="159.0" promptText="NIC" />
+            <JFXTextField fx:id="txtusername" layoutX="27.0" layoutY="200.0" prefHeight="26.0" prefWidth="375.0" promptText="UserName" />
+            <JFXTextField fx:id="txtpassword" layoutX="31.0" layoutY="250.0" prefHeight="26.0" prefWidth="357.0" promptText="Password" />
+            <JFXButton buttonType="RAISED" layoutX="138.0" layoutY="311.0" onAction="#btnCreateAccOnAction" prefHeight="35.0" prefWidth="143.0" style="-fx-background-color: #16a085; -fx-background-radius: 20;" text="      Create Account">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </JFXButton>
+            <ImageView fitHeight="26.0" fitWidth="28.0" layoutX="138.0" layoutY="316.0">
                <image>
-                  <Image url="@image/create%20account.jpg" />
+                  <Image url="@image/icons8-create-64.png" />
                </image>
             </ImageView>
          </children>
       </AnchorPane>
-      <Label layoutX="560.0" layoutY="14.0" prefHeight="35.0" prefWidth="235.0" style="-fx-background-color: #7f8c8d;" text="Create An Account !">
+      <AnchorPane prefHeight="466.0" prefWidth="426.0">
+         <children>
+            <ImageView fitHeight="355.0" fitWidth="346.0" layoutX="33.0" layoutY="60.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/1_X2xtMg19x_Um_pai92oCpA.jpg" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <Label layoutX="465.0" layoutY="14.0" prefHeight="35.0" prefWidth="299.0" style="-fx-background-color: #2f3542; -fx-background-radius: 20;" text="      Create An Account  !" textFill="WHITE">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <JFXTextField fx:id="txtFname" layoutX="490.0" layoutY="106.0" prefHeight="26.0" prefWidth="159.0" promptText="First Name">
-         <effect>
-            <Bloom />
-         </effect>
-      </JFXTextField>
-      <JFXTextField fx:id="txtLname" layoutX="696.0" layoutY="106.0" prefHeight="26.0" prefWidth="159.0" promptText="Last Name" />
-      <JFXTextField fx:id="txtnic" layoutX="696.0" layoutY="177.0" prefHeight="26.0" prefWidth="159.0" promptText="NIC" />
-      <JFXTextField fx:id="txtetf" layoutX="490.0" layoutY="177.0" prefHeight="26.0" prefWidth="159.0" promptText="ETF Number" />
-      <JFXTextField fx:id="txtusername" layoutX="494.0" layoutY="256.0" prefHeight="26.0" prefWidth="310.0" promptText="UserName" />
-      <JFXTextField fx:id="txtpassword" layoutX="494.0" layoutY="310.0" prefHeight="26.0" prefWidth="310.0" promptText="Password" />
-      <JFXButton buttonType="RAISED" layoutX="610.0" layoutY="378.0" onAction="#btnCreateAccOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #16a085;" text="      Create Account">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </JFXButton>
-      <Line endX="193.20001220703125" layoutX="671.0" layoutY="437.0" startX="-187.5999755859375" />
-      <ImageView fitHeight="26.0" fitWidth="28.0" layoutX="610.0" layoutY="383.0">
-         <image>
-            <Image url="@image/icons8-create-64.png" />
-         </image>
-      </ImageView>
+      <Line endX="219.4000244140625" layoutX="599.0" layoutY="438.0" startX="-187.5999755859375" />
    </children>
 </AnchorPane>
