--- a/src/main/resources/view/Dashboard_form.fxml
+++ b/src/main/resources/view/Dashboard_form.fxml
@@ -10,51 +10,49 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootNode" prefHeight="681.0" prefWidth="1500.0" style="-fx-background-color: #ffb8b8;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.DashboardFormController">
+<AnchorPane fx:id="rootNode" prefHeight="681.0" prefWidth="1500.0" style="-fx-background-color: #778ca3;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.DashboardFormController">
    <children>
-      <AnchorPane layoutX="-15.0" layoutY="-3.0" prefHeight="696.0" prefWidth="206.0" style="-fx-background-color: #778ca3;">
+      <AnchorPane layoutX="-15.0" layoutY="-3.0" prefHeight="696.0" prefWidth="206.0" style="-fx-background-color: #4b6584;">
          <children>
-            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="129.0" onAction="#btnManageCustomerOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #778beb;" text="               Manage Customer">
+            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="129.0" onAction="#btnManageCustomerOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="               Manage Customer">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="34.0" layoutY="339.0" onAction="#btnManageEmployeeOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #778beb;" text="              Manage Employee">
+            <JFXButton buttonType="RAISED" layoutX="34.0" layoutY="339.0" onAction="#btnManageEmployeeOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="              Manage Employee">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="197.0" onAction="#btnManageItemOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #778beb;" text="              Manage Items">
+            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="197.0" onAction="#btnManageItemOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="              Manage Items">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="407.0" onAction="#btnManageSupplierOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #778beb;" text="                 Manage Supplier">
+            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="407.0" onAction="#btnManageSupplierOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="                 Manage Supplier">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></JFXButton>
-            <Label layoutX="29.0" layoutY="650.0" text="Need help?.." />
+            <Label layoutX="29.0" layoutY="650.0" text="Need help?..">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font></Label>
             <Label layoutX="32.0" layoutY="668.0" text="Open help center here">
                <font>
-                  <Font size="9.0" />
+                  <Font name="System Bold" size="10.0" />
                </font>
             </Label>
-            <Line endX="-81.59999084472656" layoutX="204.0" layoutY="682.0" startX="-100.0" />
-            <ImageView fitHeight="64.0" fitWidth="76.0" layoutX="75.0" layoutY="14.0">
-               <image>
-                  <Image url="@image/icons8-user-50.png" />
-               </image>
-            </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="547.0" onAction="#btnManageReportOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #778beb;" text="                    Manage Report">
+            <Line endX="-72.40000915527344" layoutX="214.0" layoutY="682.0" startX="-100.0" />
+            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="547.0" onAction="#btnManageReportOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="                    Manage Report">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -62,7 +60,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="269.0" onAction="#btnPlaceOrderOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #778beb;" text="            Place Order">
+            <JFXButton buttonType="RAISED" layoutX="31.0" layoutY="269.0" onAction="#btnPlaceOrderOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="            Place Order">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -70,7 +68,7 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="34.0" layoutY="474.0" onAction="#btnManageMaterialOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #778beb;" text="                 Manage Material">
+            <JFXButton buttonType="RAISED" layoutX="34.0" layoutY="474.0" onAction="#btnManageMaterialOnAction" prefHeight="34.0" prefWidth="156.0" style="-fx-background-color: #fa8231; -fx-background-radius: 10;" text="                 Manage Material">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -113,21 +111,21 @@
                   <Image url="@image/icons8-report-48.png" />
                </image>
             </ImageView>
+            <ImageView fitHeight="82.0" fitWidth="90.0" layoutX="62.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@image/gentleman-logo-design-clothing-company-logo-vector-31051507.jpg" />
+               </image>
+            </ImageView>
+            <Label layoutX="65.0" layoutY="55.0" style="-fx-background-color: #f7f1e3;" text="Liyo Garment">
+               <font>
+                  <Font name="System Bold Italic" size="12.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
-      <Label layoutX="320.0" layoutY="11.0" prefHeight="18.0" prefWidth="129.0" text="   Welcome Back!!">
+      <Label layoutX="206.0" layoutY="15.0" prefHeight="18.0" prefWidth="129.0" text="   Welcome Back !!">
          <font>
             <Font name="System Bold" size="14.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="128.0" fitWidth="166.0" layoutX="200.0" layoutY="-17.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@image/gentleman-logo-design-clothing-company-logo-vector-31051507.jpg" />
-         </image>
-      </ImageView>
-      <Label layoutX="226.0" layoutY="64.0" style="-fx-background-color: #f7f1e3;" text="Liyo Garment">
-         <font>
-            <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
       <TextField layoutX="690.0" layoutY="25.0" prefHeight="26.0" prefWidth="446.0" />
@@ -141,7 +139,7 @@
             <Font size="11.0" />
          </font>
       </Label>
-      <AnchorPane layoutX="271.0" layoutY="125.0" prefHeight="548.0" prefWidth="1210.0" style="-fx-background-color: #d2dae2;">
+      <AnchorPane layoutX="223.0" layoutY="78.0" prefHeight="595.0" prefWidth="1258.0" style="-fx-background-color: #d2dae2;">
          <children>
             <Label layoutX="15.0" layoutY="14.0" text="Dashboard">
                <font>
