--- a/src/main/resources/view/Supplier_form.fxml
+++ b/src/main/resources/view/Supplier_form.fxml
@@ -19,12 +19,12 @@
                   <Image url="@image/supplier.jpg" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="346.0" layoutY="70.0" prefHeight="546.0" prefWidth="394.0" style="-fx-background-color: #8c7ae6;">
+            <AnchorPane layoutX="346.0" layoutY="70.0" prefHeight="546.0" prefWidth="394.0" style="-fx-background-color: #718093;">
                <children>
-                  <TextField layoutX="153.0" layoutY="94.0" prefHeight="26.0" prefWidth="214.0" />
-                  <TextField layoutX="153.0" layoutY="178.0" prefHeight="26.0" prefWidth="214.0" />
-                  <TextField layoutX="153.0" layoutY="267.0" prefHeight="26.0" prefWidth="214.0" />
-                  <TextField layoutX="153.0" layoutY="363.0" prefHeight="26.0" prefWidth="214.0" />
+                  <TextField layoutX="153.0" layoutY="94.0" prefHeight="26.0" prefWidth="214.0" style="-fx-background-radius: 30;" />
+                  <TextField layoutX="153.0" layoutY="178.0" prefHeight="26.0" prefWidth="214.0" style="-fx-background-radius: 30;" />
+                  <TextField layoutX="153.0" layoutY="267.0" prefHeight="26.0" prefWidth="214.0" style="-fx-background-radius: 30;" />
+                  <TextField layoutX="153.0" layoutY="363.0" prefHeight="26.0" prefWidth="214.0" style="-fx-background-radius: 30;" />
                   <Label layoutX="41.0" layoutY="98.0" text="Supplier Id">
                      <font>
                         <Font name="System Bold" size="13.0" />
@@ -50,7 +50,7 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="153.0" layoutY="460.0" prefHeight="26.0" prefWidth="214.0" />
+                  <TextField layoutX="153.0" layoutY="460.0" prefHeight="26.0" prefWidth="214.0" style="-fx-background-radius: 30;" />
                   <Label layoutX="36.0" layoutY="464.0" text="Supplier Type">
                      <font>
                         <Font name="System Bold" size="12.0" />
@@ -58,7 +58,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <Label layoutX="421.0" layoutY="14.0" prefHeight="35.0" prefWidth="502.0" style="-fx-background-color: #0097e6;" text="                       Manage Supplier" textFill="#f5f6fa">
+            <Label layoutX="421.0" layoutY="14.0" prefHeight="35.0" prefWidth="502.0" style="-fx-background-color: #0097e6; -fx-background-radius: 40;" text="                       Manage Supplier" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
@@ -68,22 +68,22 @@
                   <Font size="11.0" />
                </font>
             </TextField>
-            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="243.0" prefHeight="35.0" prefWidth="109.0" style="-fx-background-color: #0a3d62;" text="Add Supplier" textFill="#dfe6e9">
+            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="243.0" prefHeight="35.0" prefWidth="109.0" style="-fx-background-color: #44bd32; -fx-background-radius: 30;" text="Add Supplier" textFill="#dfe6e9">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="325.0" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #0a3d62;" text="Delete Supplier" textFill="#dfe6e9">
+            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="325.0" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #e84118; -fx-background-radius: 30;" text="Delete Supplier" textFill="#dfe6e9">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="428.0" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #0a3d62;" text="Update Supplier" textFill="#dfe6e9">
+            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="398.0" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 30;" text="Update Supplier" textFill="#dfe6e9">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="533.0" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #0a3d62;" text="Search Supplier" textFill="#dfe6e9">
+            <JFXButton buttonType="RAISED" layoutX="750.0" layoutY="471.0" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #0a3d62; -fx-background-radius: 30;" text="Clear" textFill="#dfe6e9">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -112,7 +112,7 @@
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="598.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="68.0" style="-fx-background-color: #0a3d62;" text="Back" textFill="#dfe6e9">
+            <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="598.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="68.0" style="-fx-background-color: #0a3d62; -fx-background-radius: 40;" text="Back" textFill="#dfe6e9">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
