--- a/src/main/resources/view/customer_form.fxml
+++ b/src/main/resources/view/customer_form.fxml
@@ -19,14 +19,14 @@
                   <Image url="@image/R.png" />
                </image>
             </ImageView>
-            <Label layoutX="384.0" layoutY="21.0" prefHeight="35.0" prefWidth="482.0" style="-fx-background-color: #6c5ce7;" text="                      Manage Customer" textFill="#dfe6e9">
+            <Label layoutX="384.0" layoutY="21.0" prefHeight="35.0" prefWidth="482.0" style="-fx-background-color: #6c5ce7; -fx-background-radius: 20;" text="                      Manage Customer" textFill="#dfe6e9">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
             </Label>
-            <AnchorPane layoutX="312.0" layoutY="98.0" prefHeight="480.0" prefWidth="403.0" style="-fx-background-color: #00b894;">
+            <AnchorPane layoutX="312.0" layoutY="98.0" prefHeight="480.0" prefWidth="403.0" style="-fx-background-color: #718093; -fx-background-radius: 40;">
                <children>
-                  <Label layoutX="111.0" layoutY="14.0" prefHeight="35.0" prefWidth="196.0" style="-fx-background-color: #81ecec;" text="     Fill this form">
+                  <Label layoutX="111.0" layoutY="14.0" prefHeight="35.0" prefWidth="196.0" style="-fx-background-color: #81ecec; -fx-background-radius: 30;" text="     Fill this form">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
@@ -35,40 +35,40 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
-                  <Label layoutX="46.0" layoutY="217.0" text="Name">
+                  <Label layoutX="46.0" layoutY="231.0" text="Name">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
-                  <Label layoutX="40.0" layoutY="315.0" text="Address">
+                  <Label layoutX="40.0" layoutY="328.0" text="Address">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
-                  <TextField fx:id="txtid" layoutX="135.0" layoutY="133.0" prefHeight="26.0" prefWidth="196.0" />
-                  <TextField fx:id="txtname" layoutX="135.0" layoutY="213.0" prefHeight="26.0" prefWidth="196.0" />
-                  <TextField fx:id="txttel" layoutX="135.0" layoutY="415.0" prefHeight="26.0" prefWidth="196.0" />
-                  <TextField fx:id="txtaddress" layoutX="135.0" layoutY="311.0" prefHeight="26.0" prefWidth="196.0" />
+                  <TextField fx:id="txtid" layoutX="135.0" layoutY="133.0" prefHeight="26.0" prefWidth="196.0" style="-fx-background-radius: 20;" />
+                  <TextField fx:id="txtname" layoutX="135.0" layoutY="227.0" prefHeight="26.0" prefWidth="196.0" style="-fx-background-radius: 20;" />
+                  <TextField fx:id="txttel" layoutX="135.0" layoutY="415.0" prefHeight="26.0" prefWidth="196.0" style="-fx-background-radius: 20;" />
+                  <TextField fx:id="txtaddress" layoutX="135.0" layoutY="324.0" prefHeight="26.0" prefWidth="196.0" style="-fx-background-radius: 20;" />
                   <Label layoutX="33.0" layoutY="419.0" text="Telephone">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
                </children>
             </AnchorPane>
-            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="213.0" onAction="#btnAddCustomerOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Add Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="182.0" onAction="#btnAddCustomerOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #44bd32; -fx-background-radius: 30;" text="Add Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="295.0" onAction="#btnUpdateOnAction" prefHeight="35.0" prefWidth="121.0" style="-fx-background-color: #273c75;" text="Update Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="268.0" onAction="#btnUpdateOnAction" prefHeight="35.0" prefWidth="121.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 30;" text="Update Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="379.0" onAction="#btnDeleteonAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Delete customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="349.0" onAction="#btnDeleteonAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #e84118; -fx-background-radius: 30;" text="Delete customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="725.0" layoutY="468.0" onAction="#btnSearchOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75;" text="Search Customer" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="423.0" onAction="#btnSearchOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #273c75; -fx-background-radius: 30;" text="Search Customer" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -84,13 +84,13 @@
                   <Image url="@image/icons8-search-24.png" />
                </image>
             </ImageView>
-            <TableView layoutX="894.0" layoutY="130.0" prefHeight="474.0" prefWidth="582.0">
+            <TableView fx:id="tblCustomer" layoutX="894.0" layoutY="130.0" prefHeight="474.0" prefWidth="582.0">
               <columns>
-                <TableColumn prefWidth="150.39996337890625" text="Customer_id" />
+                <TableColumn fx:id="colId" prefWidth="150.39996337890625" text="Customer_id" />
                 <TableColumn minWidth="0.0" prefWidth="0.0" text="C2" />
-                  <TableColumn prefWidth="150.39990234375" text="Name" />
-                  <TableColumn prefWidth="150.39996337890625" text="Address" />
-                  <TableColumn prefWidth="150.39996337890625" text="Telephone" />
+                  <TableColumn fx:id="colName" prefWidth="150.39990234375" text="Name" />
+                  <TableColumn fx:id="colAddress" prefWidth="150.39996337890625" text="Address" />
+                  <TableColumn fx:id="colTel" prefWidth="150.39996337890625" text="Telephone" />
               </columns>
             </TableView>
             <Label layoutX="1039.0" layoutY="67.0" text="Here is the table View For Customer" textFill="#fc3030">
@@ -98,7 +98,12 @@
                   <Font name="System Bold Italic" size="18.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="35.0" layoutY="586.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="65.0" style="-fx-background-color: #273c75;" text="Back" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="35.0" layoutY="586.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="65.0" style="-fx-background-color: #273c75; -fx-background-radius: 20;" text="Back" textFill="#f5f6fa">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </JFXButton>
+            <JFXButton buttonType="RAISED" layoutX="724.0" layoutY="494.0" onAction="#btnClearOnAction" prefHeight="35.0" prefWidth="122.0" style="-fx-background-color: #9980FA; -fx-background-radius: 30;" text="Clear" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
