--- a/src/main/resources/view/employee_form.fxml
+++ b/src/main/resources/view/employee_form.fxml
@@ -19,11 +19,11 @@
                   <Image url="@image/employee_manage.jpg" />
                </image>
             </ImageView>
-            <AnchorPane layoutX="337.0" layoutY="81.0" prefHeight="492.0" prefWidth="330.0" style="-fx-background-color: #fad390;">
+            <AnchorPane layoutX="337.0" layoutY="81.0" prefHeight="492.0" prefWidth="330.0" style="-fx-background-color: #718093; -fx-background-radius: 40;">
                <children>
-                  <TextField layoutX="112.0" layoutY="150.0" prefHeight="26.0" prefWidth="186.0" />
-                  <TextField layoutX="112.0" layoutY="308.0" prefHeight="26.0" prefWidth="186.0" />
-                  <TextField layoutX="112.0" layoutY="400.0" prefHeight="26.0" prefWidth="186.0" />
+                  <TextField fx:id="txtid" layoutX="112.0" layoutY="150.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
+                  <TextField fx:id="txtaddress" layoutX="112.0" layoutY="308.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
+                  <TextField fx:id="txttel" layoutX="112.0" layoutY="400.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
                   <Label layoutX="92.0" layoutY="14.0" text="Fill this Form">
                      <font>
                         <Font name="System Bold" size="24.0" />
@@ -45,30 +45,30 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font></Label>
-                  <TextField layoutX="112.0" layoutY="225.0" prefHeight="26.0" prefWidth="186.0" />
+                  <TextField fx:id="txtname" layoutX="112.0" layoutY="225.0" prefHeight="26.0" prefWidth="186.0" style="-fx-background-radius: 30;" />
                </children>
             </AnchorPane>
-            <Label layoutX="346.0" layoutY="14.0" prefHeight="35.0" prefWidth="391.0" style="-fx-background-color: #8c7ae6;" text="               Manage Employee" textFill="#f5f6fa">
+            <Label layoutX="346.0" layoutY="14.0" prefHeight="35.0" prefWidth="391.0" style="-fx-background-color: #8c7ae6; -fx-background-radius: 40;" text="               Manage Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="692.0" layoutY="202.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Add Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="681.0" layoutY="194.0" onAction="#btnAddonAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #20bf6b; -fx-background-radius: 20;" text="Add Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="692.0" layoutY="304.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Delete Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="681.0" layoutY="274.0" onAction="#btnDeleteOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #b71540; -fx-background-radius: 20;" text="Delete Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="692.0" layoutY="425.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Update Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="681.0" layoutY="348.0" onAction="#btnUpdateOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #e1b12c; -fx-background-radius: 20;" text="Update Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton buttonType="RAISED" layoutX="692.0" layoutY="523.0" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75;" text="Search Employee" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="681.0" layoutY="428.0" onAction="#btnSearchOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #273c75; -fx-background-radius: 20;" text="Search Employee" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -102,7 +102,12 @@
                   <Font name="System Bold Italic" size="18.0" />
                </font>
             </Label>
-            <JFXButton buttonType="RAISED" layoutX="21.0" layoutY="591.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="70.0" style="-fx-background-color: #273c75;" text="Back" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="21.0" layoutY="591.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="70.0" style="-fx-background-color: #273c75; -fx-background-radius: 30;" text="Back" textFill="#f5f6fa">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </JFXButton>
+            <JFXButton buttonType="RAISED" layoutX="681.0" layoutY="507.0" onAction="#btnClearOnAction" prefHeight="42.0" prefWidth="138.0" style="-fx-background-color: #9980FA; -fx-background-radius: 20;" text="Clear" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
