--- a/src/main/resources/view/logging_form.fxml
+++ b/src/main/resources/view/logging_form.fxml
@@ -12,8 +12,15 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootNode" prefHeight="441.0" prefWidth="880.0" style="-fx-background-color: #D6A2E8;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.LoggingFormController">
+<AnchorPane fx:id="rootNode" prefHeight="501.0" prefWidth="880.0" style="-fx-background-color: #d1d8e0;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.LoggingFormController">
    <children>
+      <AnchorPane layoutX="477.0" layoutY="131.0" prefHeight="339.0" prefWidth="384.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 30;">
+         <children>
+            <Line endX="-3.60003662109375" endY="-9.1552734375E-5" layoutX="147.0" layoutY="254.0" startX="-132.4000244140625" startY="-6.103515625E-5" />
+            <Label layoutX="184.0" layoutY="245.0" text="OR" />
+            <Line endX="45.4000244140625" endY="-3.0517578125E-5" layoutX="320.0" layoutY="254.0" startX="-95.0" startY="-3.0517578125E-5" />
+         </children>
+      </AnchorPane>
       <JFXTextField fx:id="txtusername" layoutX="508.0" layoutY="166.0" prefHeight="26.0" prefWidth="334.0">
          <effect>
             <Blend>
@@ -32,7 +39,7 @@
             <Font name="System Bold Italic" size="12.0" />
          </font>
       </Label>
-      <JFXButton buttonType="RAISED" layoutX="628.0" layoutY="332.0" onAction="#btnLoggingOnAction" prefHeight="27.0" prefWidth="94.0" style="-fx-background-color: #16a085;" text="    Log in">
+      <JFXButton buttonType="RAISED" layoutX="628.0" layoutY="332.0" onAction="#btnLoggingOnAction" prefHeight="27.0" prefWidth="94.0" style="-fx-background-color: #079992; -fx-background-radius: 10;" text="    Log in">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -57,24 +64,22 @@
             </Blend>
          </effect>
       </JFXTextField>
-      <ImageView fitHeight="111.0" fitWidth="131.0" layoutX="638.0" layoutY="19.0">
+      <ImageView fitHeight="111.0" fitWidth="131.0" layoutX="619.0" layoutY="14.0">
          <image>
             <Image url="@image/3426587.png" />
          </image>
       </ImageView>
-      <AnchorPane prefHeight="454.0" prefWidth="482.0" style="-fx-background-color: #3B3B98;">
+      <AnchorPane prefHeight="502.0" prefWidth="444.0" style="-fx-background-color: #d1d8e0;">
          <children>
-            <ImageView fitHeight="458.0" fitWidth="482.0" layoutY="52.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="368.0" fitWidth="429.0" layoutX="14.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@image/istockphoto-1135332848-612x612.jpg" />
+                  <Image url="@image/loging%20new.jpeg" />
                </image>
             </ImageView>
+            <AnchorPane layoutX="13.0" layoutY="416.0" prefHeight="34.0" prefWidth="429.0" style="-fx-background-color: #ffffff;" />
          </children>
       </AnchorPane>
-      <Line endX="13.20001220703125" endY="-6.103515625E-5" layoutX="623.0" layoutY="380.0" startX="-132.4000244140625" startY="-6.103515625E-5" />
-      <Label layoutX="668.0" layoutY="371.0" text="OR" />
-      <Line endX="56.5999755859375" endY="-3.0517578125E-5" layoutX="809.0" layoutY="379.0" startX="-95.0" startY="-3.0517578125E-5" />
-      <JFXButton buttonType="RAISED" layoutX="602.0" layoutY="399.0" onAction="#btnCreateAccountOnAction" prefHeight="27.0" prefWidth="147.0" style="-fx-background-color: #16a085;" text="       Create Account">
+      <JFXButton buttonType="RAISED" layoutX="602.0" layoutY="425.0" onAction="#btnCreateAccountOnAction" prefHeight="27.0" prefWidth="147.0" style="-fx-background-color: #1e90ff; -fx-background-radius: 10;" text="       Create Account">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -110,7 +115,7 @@
             <Image url="@image/icons8-log-in-30.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="24.0" fitWidth="30.0" layoutX="607.0" layoutY="401.0">
+      <ImageView fitHeight="24.0" fitWidth="30.0" layoutX="604.0" layoutY="427.0">
          <image>
             <Image url="@image/icons8-create-64.png" />
          </image>
