--- a/src/main/resources/view/report_form.fxml
+++ b/src/main/resources/view/report_form.fxml
@@ -11,14 +11,14 @@
 
 <AnchorPane fx:id="rootNode" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.ReportFormController">
    <children>
-      <AnchorPane prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #d2dae2;">
+      <AnchorPane prefHeight="650.0" prefWidth="1500.0" style="-fx-background-color: #d2dae2;">
          <children>
-            <ImageView fitHeight="334.0" fitWidth="297.0" layoutX="14.0" layoutY="108.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="353.0" fitWidth="365.0" layoutY="142.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@image/500_F_112921427_l8VWy8yvbcdqjicMJYF0u2vG3YDpZmiA.jpg" />
                </image>
             </ImageView>
-            <Label layoutX="349.0" layoutY="14.0" prefHeight="35.0" prefWidth="289.0" style="-fx-background-color: #05c46b;" text="        Manage Report">
+            <Label layoutX="605.0" layoutY="14.0" prefHeight="35.0" prefWidth="289.0" style="-fx-background-color: #05c46b; -fx-background-radius: 40;" text="        Manage Report">
                <font>
                   <Font name="System Bold Italic" size="24.0" />
                </font>
@@ -33,7 +33,7 @@
                   <Image url="@image/icons8-search-24.png" />
                </image>
             </ImageView>
-            <JFXButton buttonType="RAISED" layoutX="24.0" layoutY="450.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="66.0" style="-fx-background-color: #273c75;" text="Back" textFill="#f5f6fa">
+            <JFXButton buttonType="RAISED" layoutX="14.0" layoutY="600.0" onAction="#btnBackOnAction" prefHeight="35.0" prefWidth="66.0" style="-fx-background-color: #273c75; -fx-background-radius: 40;" text="Back" textFill="#f5f6fa">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
