--- a/src/main/resources/view/logging_form.fxml
+++ b/src/main/resources/view/logging_form.fxml
@@ -9,61 +9,79 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="rootNode" prefHeight="501.0" prefWidth="880.0" style="-fx-background-color: #d1d8e0;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.Controller.LoggingFormController">
    <children>
-      <AnchorPane layoutX="477.0" layoutY="131.0" prefHeight="339.0" prefWidth="384.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 30;">
+      <AnchorPane layoutX="477.0" layoutY="131.0" prefHeight="358.0" prefWidth="384.0" style="-fx-background-color: #a4b0be; -fx-background-radius: 30;">
          <children>
-            <Line endX="-3.60003662109375" endY="-9.1552734375E-5" layoutX="147.0" layoutY="254.0" startX="-132.4000244140625" startY="-6.103515625E-5" />
-            <Label layoutX="184.0" layoutY="245.0" text="OR" />
-            <Line endX="45.4000244140625" endY="-3.0517578125E-5" layoutX="320.0" layoutY="254.0" startX="-95.0" startY="-3.0517578125E-5" />
+            <JFXTextField fx:id="txtpassword" labelFloat="true" layoutX="35.0" layoutY="179.0" prefHeight="26.0" prefWidth="334.0" promptText="Password">
+               <effect>
+                  <Blend>
+                     <topInput>
+                        <PerspectiveTransform />
+                     </topInput>
+                  </Blend>
+               </effect>
+            </JFXTextField>
+            <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="337.0" layoutY="180.0">
+               <image>
+                  <Image url="@image/icons8-password-30.png" />
+               </image>
+            </ImageView>
+            <JFXButton buttonType="RAISED" layoutX="271.0" layoutY="290.0" onAction="#btnLoggingOnAction" prefHeight="34.0" prefWidth="92.0" style="-fx-background-color: #079992; -fx-background-radius: 10;" text="    Log in">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </JFXButton>
+            <ImageView fitHeight="15.0" fitWidth="17.0" layoutX="280.0" layoutY="300.0">
+               <image>
+                  <Image url="@image/icons8-log-in-30.png" />
+               </image>
+            </ImageView>
+            <JFXButton buttonType="RAISED" layoutX="166.0" layoutY="290.0" onAction="#btnCreateAccountOnAction" prefHeight="34.0" prefWidth="92.0" style="-fx-background-color: #1e90ff; -fx-background-radius: 10;" text="      Sign up">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </JFXButton>
+            <ImageView fitHeight="18.0" fitWidth="24.0" layoutX="166.0" layoutY="298.0">
+               <image>
+                  <Image url="@image/icons8-create-64.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="txtlabel" layoutX="46.0" layoutY="231.0" text="Remember me?">
+               <font>
+                  <Font size="10.0" />
+               </font>
+            </Label>
+            <JFXTextField fx:id="txtusername" labelFloat="true" layoutX="35.0" layoutY="93.0" prefHeight="26.0" prefWidth="334.0" promptText="UserName">
+               <effect>
+                  <Blend>
+                     <topInput>
+                        <PerspectiveTransform />
+                     </topInput>
+                  </Blend>
+               </effect>
+            </JFXTextField>
+            <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="337.0" layoutY="93.0">
+               <image>
+                  <Image url="@image/icons8-user-50.png" />
+               </image>
+            </ImageView>
+            <AnchorPane layoutX="18.0" layoutY="214.0" prefHeight="34.0" prefWidth="34.0">
+               <children>
+                  <AnchorPane layoutX="15.0" layoutY="20.0" prefHeight="8.0" prefWidth="10.0" style="-fx-background-color: #222f3e;" />
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
-      <JFXTextField fx:id="txtusername" layoutX="508.0" layoutY="166.0" prefHeight="26.0" prefWidth="334.0">
-         <effect>
-            <Blend>
-               <topInput>
-                  <PerspectiveTransform />
-               </topInput>
-            </Blend>
-         </effect></JFXTextField>
-      <Label layoutX="521.0" layoutY="148.0" prefHeight="18.0" prefWidth="85.0" text="UserName">
-         <font>
-            <Font name="System Bold Italic" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="512.0" layoutY="230.0" prefHeight="18.0" prefWidth="70.0" text="Password">
-         <font>
-            <Font name="System Bold Italic" size="12.0" />
-         </font>
-      </Label>
-      <JFXButton buttonType="RAISED" layoutX="628.0" layoutY="332.0" onAction="#btnLoggingOnAction" prefHeight="27.0" prefWidth="94.0" style="-fx-background-color: #079992; -fx-background-radius: 10;" text="    Log in">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </JFXButton>
-      <AnchorPane layoutX="515.0" layoutY="299.0" prefHeight="8.0" prefWidth="10.0" style="-fx-background-color: #222f3e;" />
-      <Label fx:id="txtlabel" layoutX="529.0" layoutY="295.0" text="Remember me?">
-         <font>
-            <Font size="10.0" />
-         </font>
-      </Label>
       <AnchorPane layoutX="362.0" layoutY="44.0" prefHeight="86.0" prefWidth="107.0" />
-      <AnchorPane layoutX="513.0" layoutY="346.0" prefHeight="34.0" prefWidth="34.0" />
-      <JFXTextField fx:id="txtpassword" layoutX="509.0" layoutY="254.0" prefHeight="26.0" prefWidth="334.0">
-         <effect>
-            <Blend>
-               <topInput>
-                  <PerspectiveTransform />
-               </topInput>
-            </Blend>
-         </effect>
-      </JFXTextField>
       <ImageView fitHeight="111.0" fitWidth="131.0" layoutX="619.0" layoutY="14.0">
          <image>
             <Image url="@image/3426587.png" />
@@ -79,46 +97,5 @@
             <AnchorPane layoutX="13.0" layoutY="416.0" prefHeight="34.0" prefWidth="429.0" style="-fx-background-color: #ffffff;" />
          </children>
       </AnchorPane>
-      <JFXButton buttonType="RAISED" layoutX="602.0" layoutY="425.0" onAction="#btnCreateAccountOnAction" prefHeight="27.0" prefWidth="147.0" style="-fx-background-color: #1e90ff; -fx-background-radius: 10;" text="       Create Account">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font>
-      </JFXButton>
-      <JFXButton buttonType="RAISED" layoutX="791.0" layoutY="19.0" onAction="#btnAddOnAction" prefHeight="26.0" prefWidth="70.0" style="-fx-background-color: #0984e3;" text="     Save">
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-         <font>
-            <Font name="System Bold" size="10.0" />
-         </font>
-      </JFXButton>
-      <ImageView layoutX="791.0" layoutY="20.0">
-         <image>
-            <Image url="@image/icons8-add-24.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="814.0" layoutY="255.0">
-         <image>
-            <Image url="@image/icons8-password-30.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="814.0" layoutY="167.0">
-         <image>
-            <Image url="@image/icons8-user-50.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="18.0" fitWidth="30.0" layoutX="629.0" layoutY="337.0">
-         <image>
-            <Image url="@image/icons8-log-in-30.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="24.0" fitWidth="30.0" layoutX="604.0" layoutY="427.0">
-         <image>
-            <Image url="@image/icons8-create-64.png" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
